@@ -1,3 +1,9 @@
+2003-02-14  Arvind Samptur <arvind.samptur@wipro.com>
+	* src/screen.c: (meta_screen_new) : Update the workspace
+	names from gconf and set the NET_DESKTOP_NAMES atom.
+	Renamed update_workspace_names() to set_workspace_names().
+	Fixes #105498
+
 2003-02-04  Havoc Pennington  <hp@redhat.com>
 
 	* NEWS: updated
